2012-07-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/studio.h (MAGICK_CACHE_LINE_SIZE): Assume a cache line
	size of 64 bytes except for on PowerPC which uses 128.

	* magick/pixel_cache.c: Use aligned memory allocator to allocate
	structures and buffers which might suffer from false cache line
	sharing

	* magick/memory.c (MagickMallocAligned): Also round up allocation
	size to alignment.

2012-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c, magick/random.c, magick/semaphore.c: Use
	aligned memory allocator to align allocations which should be
	aligned to cache line boundary.

2012-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/memory.h (MagickAllocateAlignedMemory): New macro to
	allocate aligned memory.
	(MagickFreeAlignedMemory): New macro to free aligned memory.

	* magick/memory.c (MagickMallocAligned): New internal function to
	allocate aligned memory.
	(MagickFreeAligned): New internal function to free aligned memory.

2012-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/common.h (MAGICK_ASSUME_ALIGNED): Add some GCC attribute
	wrappers for useful features added by GCC 4.7.

2012-07-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Try to be better about reporting
	failure when ReadBlob() fails to return the requested number of
	bytes.

2012-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/benchmarks.rst: Strip the outdated benchmark results from
	the benchmarks page.

	* magick/command.c (ImportImageCommand): Status returned from the
	command was inverted.

2012-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Release GraphicsMagick 1.3.16

2012-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): -units was adjusting existing
	resolution the wrong way around.

2012-06-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jpeg: Updated to IJG 8d release.
